add Animation button

--- a/MobileGame/MobileGame/MainPage.xaml
+++ b/MobileGame/MobileGame/MainPage.xaml
@@ -1,7 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:controls="clr-namespace:MobileGame.Controls" xmlns:viewmodels="clr-namespace:MobileGame.ViewModels" x:DataType="viewmodels:MainPageViewModel"
              x:Class="MobileGame.MainPage"
              >
-
+    <Grid>
+        <controls:AnimationButton HorizontalOptions="Center"
+                                  VerticalOptions="Center"
+                                  Text="Start!"
+                                  EnableAnimation="True"
+                                  Command="{Binding NavigateToPlayCommand}"/>
+    </Grid>
 </ContentPage>
