--- a/MobileGame/MobileGame/Views/PlayPageView.xaml
+++ b/MobileGame/MobileGame/Views/PlayPageView.xaml
@@ -1,37 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             xmlns:viewmodels="clr-namespace:MobileGame.ViewModels"
+             xmlns:viewmodels="clr-namespace:MobileGame.ViewModels" 
+             xmlns:controls="clr-namespace:MobileGame.Controls"
              x:DataType="viewmodels:PlayPageViewModel"
              x:Class="MobileGame.Views.PlayPageView"
              BackgroundImageSource="PlayField.jpg">
     <ContentPage.Content>
-        <Grid
-            RowDefinitions="*,*"
-            ColumnDefinitions="*,*">
-
-            <Image
-                TranslationX="{Binding X}"
-                TranslationY="{Binding Y}"
-                Source="MainCar2.png"
-                Grid.Column="1"
-                Grid.Row="1"
-                />
-            <Image
-                Source="WhiteCar.png"
-                VerticalOptions="Center"
-                HorizontalOptions="Center"
-                Grid.Column="0"
-                Grid.Row="0"
-                
-                />
-            <Image
-                Source="WhiteCar.png"
-                VerticalOptions="Start"
-                HorizontalOptions="Start"
-                Grid.Column="1"
-                Grid.Row="0"
-                />
-        </Grid>
+        <controls:SceneCar IntersectsCommand="{Binding IntersectsCommand}"/>
     </ContentPage.Content>
 </ContentPage>
