--- a/MobileGame/MobileGame/Views/PlayPageView.xaml
+++ b/MobileGame/MobileGame/Views/PlayPageView.xaml
@@ -11,7 +11,7 @@
             <controls:SceneCar Score="{Binding Score}"
                                IsGameContinue="{Binding IsGameContinue}"
                                IntersectsCommand="{Binding IntersectsCommand}"
-                              />
+                               LifeCount="{Binding Life}"/>
 
             <Label
                 FontSize="30"
