--- a/MobileGame/MobileGame/Views/MainPageView.xaml
+++ b/MobileGame/MobileGame/Views/MainPageView.xaml
@@ -1,19 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:prism="http://prismlibrary.com"
+             xmlns:prism="http://prismlibrary.com" xmlns:controls="clr-namespace:MobileGame.Controls"
              x:Class="MobileGame.Views.MainPageView"
              BackgroundImageSource="MainBackground.jpg" >
     <ContentPage.Content>
         <StackLayout>
            
             <Grid>
-                <Button
-            Text="Play!"
-            FontSize="30"
-            CornerRadius="5"
-            VerticalOptions="Center"
-            HorizontalOptions="Center"/>
+                <controls:AnimationButton Text="Play!"
+                                          FontSize="30"
+                                          CornerRadius="5"
+                                          VerticalOptions="Center"
+                                          HorizontalOptions="Center"
+                                          EnableAnimation="True"
+                                          Command="{Binding NavigateToPlayCommand}"/>
             </Grid>
         </StackLayout>
     </ContentPage.Content>
