--- a/MobileGame/MobileGame/Views/MainPageView.xaml
+++ b/MobileGame/MobileGame/Views/MainPageView.xaml
@@ -5,17 +5,30 @@
              x:Class="MobileGame.Views.MainPageView"
              BackgroundImageSource="MainBackground.jpg" >
     <ContentPage.Content>
-        <StackLayout>
-           
-            <Grid>
-                <controls:AnimationButton Text="Play!"
-                                          FontSize="30"
-                                          CornerRadius="5"
+        <Grid
+            RowDefinitions="*, *, Auto,60, Auto, 100">
+            <controls:AnimationButton Text="Play!"
+                                          FontSize="50"
                                           VerticalOptions="Center"
                                           HorizontalOptions="Center"
+                                          BackgroundColor="#D8D9CF"
+                                          TextColor="White"
+                                          FontAttributes="Bold"
+                                          CornerRadius="10"
+                                          HeightRequest="90"
+                                          WidthRequest="200"
                                           EnableAnimation="True"
-                                          Command="{Binding NavigateToPlayCommand}"/>
-            </Grid>
-        </StackLayout>
+                                          Command="{Binding NavigateToPlayCommand}"
+                                          Grid.Row="2"/>
+            <Label
+                Text="Magistral"
+                VerticalOptions="End"
+                HorizontalOptions="Center"
+                TextColor="White"
+                FontAttributes="Bold,Italic"
+                FontSize="90"
+                Grid.Row="4"
+                />
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
