--- a/MobileGame/MobileGame/Views/PlayPageView.xaml
+++ b/MobileGame/MobileGame/Views/PlayPageView.xaml
@@ -15,7 +15,7 @@
 
             <Label
                 FontSize="30"
-                TextColor="#850000"
+                TextColor="Red"
                 FontAttributes="Bold"
                 HorizontalOptions="Start"
                 VerticalOptions="Start"
@@ -30,7 +30,7 @@
                 />-->
             <Label
                 FontSize="30"
-                TextColor="#850000"
+                TextColor="Red"
                 FontAttributes="Bold"
                 HorizontalOptions="Center"
                 VerticalOptions="Start"
